<resources>
    <string name="app_name">multitasking app</string>
    <string name="enter_phone_no_website_location">enter phone no./website/location</string>
    <string name="call">CALL</string>
    <string name="camera">CAMERA</string>
    <string name="browser">BROWSER</string>
    <string name="call_log">CALL LOG</string>
    <string name="gallery">GALLERY</string>
    <string name="contact">CONTACT</string>
    <string name="dialpad">DIALPAD</string>
</resources>
